fix(security): Comprehensive security hardening across all layers
- CRITICAL: Migrate JWT from localStorage to sessionStorage (XSS mitigation)
- CRITICAL: Add WebSocket authentication interceptor (prevent unauthorized access)
- CRITICAL: Restrict WebSocket allowed origins (was wildcard *)
- HIGH: Add strict rate limiting on auth endpoints (10 req/min brute-force protection)
- HIGH: Add XSRF/CSRF protection in Angular config
- HIGH: Verify Stripe webhook signatures (prevent forged payment events)
- HIGH: Sanitize error messages in QuotaEnforcementFilter (prevent XSS injection)
- HIGH: Restrict CORS allowed headers to explicit whitelist
- MEDIUM: Add InputSanitizationFilter (XSS/SQL injection in query params)
- MEDIUM: Enforce max message size and session limits on WebSocket
- MEDIUM: Add input validation limits on ML batch API (DoS prevention)
- MEDIUM: Validate marketplace pagination bounds
- MEDIUM: Externalize all hardcoded credentials to env vars
- MEDIUM: Bind Docker ports to 127.0.0.1 (prevent external exposure)
- MEDIUM: Enable Redis authentication
- LOW: Add TLS to Helm ingress, use Kubernetes secrets for passwords
- LOW: Remove default credentials from install script
- LOW: Add CSP frame-ancestors, base-uri, object-src, upgrade-insecure-requests
- LOW: Add Cache-Control no-store for API responses

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>